# knowledgebase

./: .gitignore  README.md  ROADMAP.md
backend/: .env.example  pyproject.toml
backend/app/: main.py  schemas.py
backend/app/api/: routes.py
backend/app/core/: config.py
backend/app/services/: chat.py  embeddings.py  fts_index.py  indexer.py  jobs.py  llm_provider.py  ocr_engine.py  parsers.py  projects.py  retrieval.py  tags.py  text_utils.py
backend/app/storage/: database.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.vue  styles.css
frontend/src/services/: api.ts
